# CanvaMath

./: .gitmodules  CMakeLists.txt  CNAME  README.md
src/: CMakeLists.txt
src/RenderAPI/: DebugGL.cpp  DebugGL.h  EBO.cpp  EBO.h  RenderAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UBO.cpp  UBO.h  VAO.cpp  VAO.h  VBLayout.h  VBO.cpp  VBO.h
src/RenderAPI/glad/include/glad/: glad.h
src/RenderAPI/glad/src/: glad.c
src/Renderer/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h
src/Scenes/: Scene.cpp  Scene.h  Scene1.cpp  Scene1.h
src/Shaders/: default.frag  default.vert  mandelbrot.frag
src/Shaders/Lights/: DirectionalLight.glsl  PointLight.glsl
src/Shaders/Phong/: phong.frag  phong.vert  phong_maps.frag  phonglights.frag
src/core/: Camera.cpp  Camera.h  Debug.h  Shapes.cpp  Shapes.h  UI.cpp  UI.h  Window.cpp  Window.h  main.cpp
